<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="@color/black"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="207dp"
        app:srcCompat="@drawable/banner"/>

    <TextView
        android:="@+id/txtInvitation"
        style="@style/viewCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="15sp"
        android:textAlignment="center"
        android:textColor="@color/orange"
        />
    <EditText
        android:layout_margin="@+id/etmail"
        style="@style/viewCustom"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"/>

    <EditText
        android:layout_margin="@+id/etPassword"
        style="@style/viewCustom"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"/>

    <TextView
        style="@style/viewCustom"
        android:layout_height="38dp"
        android:="@+id/btnLogin"
        android:background="@color/green"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp" />
       <!--android:onClick="login"-->

    <TextView
        android:="@+id/txtForgotPasword"
        style="@style/viewCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgotPassword"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:textAlignment="center"/>
    <!-- android:onClick="forgotPassword"-->

    <LinearLayout
        android:id="@+id/tmcTerm"
        style="@style/viewCustom"

        android:orientation="horizontal"
        android:background="@color/dark_blue"
        >
        <CheckBox
            android:id="@+id/tmchekAcept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acept"
            android:textSize="10sp"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:onClick="goTerms"/>
        <TextView
            android:id="@+id/tmcAcept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:textSize="10sp"
            android:textColor="@color/salmon"
            android:layout_margin="5dp"
            android:onClick="goTerms"/>
    </LinearLayout>
    <Button
        android:id="@+id/btSingGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/google"
        android:text="@string/google"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:paddingLeft="30dp"/>
    <Button
        android:id="@+id/btSingFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/facebook"
        android:text="@string/facebook"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:paddingLeft="30dp"/>




</LinearLayout>

